# office-agent

./: LICENSE  README.md  RUN_ME.bat  SETUP.md  github_push.py  push.bat  push_to_github.ps1  push_to_github.sh  pyproject.toml
docs/: README.md
src/: __init__.py
src/agent/: __init__.py  base.py  document_generator.py  task_manager.py  tools.py
src/core/: config.py
src/models/: schemas.py
src/utils/: helpers.py
src/web/: __init__.py  main.py
src/web/routes/: agent.py  document.py  task.py  utils.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_agent.py  test_document_generator.py  test_task_manager.py
