[project]
name = "office-agent"
version = "1.0.0"
description = "基于智能Agent的全流程办公自动化助手"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "twj110110", email = "twj110110@github.com"}
]
keywords = ["agent", "office", "automation", "document", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "markdown>=3.5.0",
    "aiofiles>=23.2.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/twj110110/office-agent"
Repository = "https://github.com/twj110110/office-agent"
Documentation = "https://github.com/twj110110/office-agent/blob/main/docs/README.md"
Issues = "https://github.com/twj110110/office-agent/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
